fix Makefiles for Yocto build

--- a/platform/OSP/BundleCreator/Makefile
+++ b/platform/OSP/BundleCreator/Makefile
@@ -10,6 +10,6 @@ objects = BundleCreator ManifestInfo
 
 target         = bundle
 target_version = 1
-target_libs    = PocoFoundation PocoXML PocoUtil PocoOSP PocoZip $(POCO_LICENSING)
+target_libs    = PocoFoundation PocoJSON PocoXML PocoUtil PocoOSP PocoZip $(POCO_LICENSING)
 
 include $(POCO_BASE)/build/rules/exec
