--- a/platform/OSP/StripBundle/Makefile
+++ b/platform/OSP/StripBundle/Makefile
@@ -10,6 +10,6 @@ objects = StripBundle
 
 target         = strip-bundle
 target_version = 1
-target_libs    = PocoZip PocoUtil PocoXML PocoFoundation
+target_libs    = PocoZip PocoUtil PocoXML PocoJSON PocoFoundation
 
 include $(POCO_BASE)/build/rules/exec
