upgraded bundled POCO libs to 1.9.3; upgraded bundled OSP and Remoting frameworks to 2019.2 releases

--- a/platform/OSP/Web/Makefile-Library
+++ b/platform/OSP/Web/Makefile-Library
@@ -9,7 +9,7 @@ include $(POCO_BASE)/build/rules/global
 objects = MediaTypeMapper WebServerDispatcher WebServerRequestHandlerFactory \
           WebServerExtensionPoint WebSession WebRequestHandlerFactory \
           WebServerRequestHandler WebSessionManager WebSessionStore WebServerService \
-          WebFilter WebFilterFactory WebFilterExtensionPoint
+          TokenValidator WebFilter WebFilterFactory WebFilterExtensionPoint
 
 target         = PocoOSPWeb
 target_version = 3
