--- a/platform/OSP/Web/Web_x64_vs100.vcxproj.filters
+++ b/platform/OSP/Web/Web_x64_vs100.vcxproj.filters
@@ -2,17 +2,20 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="Web">
-      <UniqueIdentifier>{c5a26721-cd1b-4509-a876-d84f266314f0}</UniqueIdentifier>
+      <UniqueIdentifier>{59f2b343-44ca-4912-9bea-9ec48eddad7f}</UniqueIdentifier>
     </Filter>
     <Filter Include="Web\Header Files">
-      <UniqueIdentifier>{df5df04e-4155-4e83-a287-5fabc43d849c}</UniqueIdentifier>
+      <UniqueIdentifier>{8fad78b6-3465-488a-9bae-edcda7857d4f}</UniqueIdentifier>
     </Filter>
     <Filter Include="Web\Source Files">
-      <UniqueIdentifier>{f4e52efe-319a-4398-9a9c-16221e39d10c}</UniqueIdentifier>
+      <UniqueIdentifier>{5ada7402-15d7-4561-87b4-98221b05486a}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Poco\OSP\Web\MediaTypeMapper.h">
+      <Filter>Web\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Poco\OSP\Web\TokenValidator.h">
       <Filter>Web\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\poco\osp\web\Web.h">
@@ -60,6 +63,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\MediaTypeMapper.cpp">
+      <Filter>Web\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\TokenValidator.cpp">
       <Filter>Web\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\WebFilter.cpp">
