--- a/platform/OSP/Web/Web_x64_vs110.vcxproj.filters
+++ b/platform/OSP/Web/Web_x64_vs110.vcxproj.filters
@@ -2,17 +2,20 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="Web">
-      <UniqueIdentifier>{6c48d7ca-4a57-4522-9c5a-11d202b415f0}</UniqueIdentifier>
+      <UniqueIdentifier>{d4a89533-fc03-4329-81a1-5b892751a071}</UniqueIdentifier>
     </Filter>
     <Filter Include="Web\Header Files">
-      <UniqueIdentifier>{b4cd9b56-d5f4-44c6-a0ab-e414894532ce}</UniqueIdentifier>
+      <UniqueIdentifier>{9fa0b90a-ad97-4a1d-ad2a-47ae533e7caf}</UniqueIdentifier>
     </Filter>
     <Filter Include="Web\Source Files">
-      <UniqueIdentifier>{6dd9ec7b-75ac-4926-a523-919a07064857}</UniqueIdentifier>
+      <UniqueIdentifier>{76eab364-7bc0-4872-98e1-f337f1241ad8}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Poco\OSP\Web\MediaTypeMapper.h">
+      <Filter>Web\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Poco\OSP\Web\TokenValidator.h">
       <Filter>Web\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\poco\osp\web\Web.h">
@@ -60,6 +63,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\MediaTypeMapper.cpp">
+      <Filter>Web\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\TokenValidator.cpp">
       <Filter>Web\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\WebFilter.cpp">
