--- a/platform/OSP/Web/Web_x64_vs120.vcxproj.filters
+++ b/platform/OSP/Web/Web_x64_vs120.vcxproj.filters
@@ -2,17 +2,20 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="Web">
-      <UniqueIdentifier>{284e7450-adb8-4d94-a73a-b3c57853c982}</UniqueIdentifier>
+      <UniqueIdentifier>{07198455-37bf-41c1-9d80-c75f224840fe}</UniqueIdentifier>
     </Filter>
     <Filter Include="Web\Header Files">
-      <UniqueIdentifier>{2210b0f7-bd0e-45cc-9a54-55cef1ec3fa6}</UniqueIdentifier>
+      <UniqueIdentifier>{cc5ca323-77a2-4710-b06a-b09941551f54}</UniqueIdentifier>
     </Filter>
     <Filter Include="Web\Source Files">
-      <UniqueIdentifier>{ad514b6d-e4fd-49fc-978f-39c46d1c33d5}</UniqueIdentifier>
+      <UniqueIdentifier>{145f732e-14a2-4636-a497-7a96c4815b9b}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Poco\OSP\Web\MediaTypeMapper.h">
+      <Filter>Web\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Poco\OSP\Web\TokenValidator.h">
       <Filter>Web\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\poco\osp\web\Web.h">
@@ -60,6 +63,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\MediaTypeMapper.cpp">
+      <Filter>Web\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\TokenValidator.cpp">
       <Filter>Web\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\WebFilter.cpp">
