--- a/platform/OSP/Web/bundle/bundle.properties
+++ b/platform/OSP/Web/bundle/bundle.properties
@@ -19,6 +19,18 @@ csrfCookie = XSRF-TOKEN
 csrfProtectionEnabled = true
 verifyAddress = true
 
+# HSTS
+hsts.enable = false
+hsts.maxAge = 63072000
+hsts.includeSubdomains = true
+
+# XSS Protection
+xssProtection.enable = false
+xssProtection.mode = block
+
+# Content-Type-Options
+contentTypeOptions = nosniff
+
 # Messages returned by the server.
 message.secure    = A secure connection is required to access $1 on this server.
 message.method    = Method $1 is not allowed for $2.
