--- a/platform/OSP/Web/Web_CE_vs90.vcproj
+++ b/platform/OSP/Web/Web_CE_vs90.vcproj
@@ -179,6 +179,8 @@
 				<File
 					RelativePath=".\include\Poco\OSP\Web\MediaTypeMapper.h"/>
 				<File
+					RelativePath=".\include\Poco\OSP\Web\TokenValidator.h"/>
+				<File
 					RelativePath=".\include\poco\osp\web\Web.h"/>
 				<File
 					RelativePath=".\include\Poco\OSP\Web\WebFilter.h"/>
@@ -211,6 +213,8 @@
 				Name="Source Files">
 				<File
 					RelativePath=".\src\MediaTypeMapper.cpp"/>
+				<File
+					RelativePath=".\src\TokenValidator.cpp"/>
 				<File
 					RelativePath=".\src\WebFilter.cpp"/>
 				<File
