--- a/platform/OSP/Web/Web_x64_vs140.vcxproj
+++ b/platform/OSP/Web/Web_x64_vs140.vcxproj
@@ -37,7 +37,7 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros"/>
   <PropertyGroup>
-    <_ProjectFileVersion>14.0.25420.1</_ProjectFileVersion>
+    <_ProjectFileVersion>14.0.25431.1</_ProjectFileVersion>
     <TargetName Condition="'$(Configuration)|$(Platform)'=='debug_shared|x64'">PocoOSPWeb64d</TargetName>
     <TargetName Condition="'$(Configuration)|$(Platform)'=='release_shared|x64'">PocoOSPWeb64</TargetName>
   </PropertyGroup>
@@ -114,6 +114,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="include\Poco\OSP\Web\MediaTypeMapper.h"/>
+    <ClInclude Include="include\Poco\OSP\Web\TokenValidator.h"/>
     <ClInclude Include="include\poco\osp\web\Web.h"/>
     <ClInclude Include="include\Poco\OSP\Web\WebFilter.h"/>
     <ClInclude Include="include\Poco\OSP\Web\WebFilterExtensionPoint.h"/>
@@ -131,6 +132,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\MediaTypeMapper.cpp"/>
+    <ClCompile Include="src\TokenValidator.cpp"/>
     <ClCompile Include="src\WebFilter.cpp"/>
     <ClCompile Include="src\WebFilterExtensionPoint.cpp"/>
     <ClCompile Include="src\WebFilterFactory.cpp"/>
