--- a/platform/OSP/Web/Web_x64_vs140.vcxproj.filters
+++ b/platform/OSP/Web/Web_x64_vs140.vcxproj.filters
@@ -2,17 +2,20 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="Web">
-      <UniqueIdentifier>{3365856d-026e-4a66-a69e-0aa1a1de2c18}</UniqueIdentifier>
+      <UniqueIdentifier>{4d90a0b3-d7b3-46aa-bbf7-5f69a0c1f634}</UniqueIdentifier>
     </Filter>
     <Filter Include="Web\Header Files">
-      <UniqueIdentifier>{bf0d0881-4bac-4641-bf1d-e45909696b45}</UniqueIdentifier>
+      <UniqueIdentifier>{233adac7-d22c-49b7-8e08-e107ee80de61}</UniqueIdentifier>
     </Filter>
     <Filter Include="Web\Source Files">
-      <UniqueIdentifier>{c147255b-b579-44ae-a90c-cc4b82ce9d3e}</UniqueIdentifier>
+      <UniqueIdentifier>{a34f8c91-423c-453b-996d-8b750ee1b71a}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Poco\OSP\Web\MediaTypeMapper.h">
+      <Filter>Web\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Poco\OSP\Web\TokenValidator.h">
       <Filter>Web\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\poco\osp\web\Web.h">
@@ -60,6 +63,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\MediaTypeMapper.cpp">
+      <Filter>Web\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\TokenValidator.cpp">
       <Filter>Web\Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\WebFilter.cpp">
