--- a/platform/OSP/Web/Web_x64_vs90.vcproj
+++ b/platform/OSP/Web/Web_x64_vs90.vcproj
@@ -166,6 +166,8 @@
 				<File
 					RelativePath=".\include\Poco\OSP\Web\MediaTypeMapper.h"/>
 				<File
+					RelativePath=".\include\Poco\OSP\Web\TokenValidator.h"/>
+				<File
 					RelativePath=".\include\poco\osp\web\Web.h"/>
 				<File
 					RelativePath=".\include\Poco\OSP\Web\WebFilter.h"/>
@@ -198,6 +200,8 @@
 				Name="Source Files">
 				<File
 					RelativePath=".\src\MediaTypeMapper.cpp"/>
+				<File
+					RelativePath=".\src\TokenValidator.cpp"/>
 				<File
 					RelativePath=".\src\WebFilter.cpp"/>
 				<File
