added Camera device

--- a/devices/Devices/Makefile-Library
+++ b/devices/Devices/Makefile-Library
@@ -74,6 +74,12 @@ objects = Device DeviceException \
 	MagnetometerRemoteObject \
 	MagnetometerServerHelper \
 	MagnetometerSkeleton \
+	Camera \
+	ICamera \
+	CameraEventDispatcher \
+	CameraRemoteObject \
+	CameraServerHelper \
+	CameraSkeleton \
 	IO \
 	IIO \
 	IOEventDispatcher \
