--- a/protocols/WebTunnel/Makefile
+++ b/protocols/WebTunnel/Makefile
@@ -1,17 +1,11 @@
 #
 # Makefile
 #
-# Makefile for macchina.io WebTunnel bundle
+# Makefile for IoT WebTunnel
 #
 
-include $(POCO_BASE)/build/rules/global
-include $(POCO_BASE)/OSP/BundleCreator/BundleCreator.make
-
-objects = BundleActivator
-
-target      = io.macchina.protocols.webtunnel
-target_libs = PocoWebTunnel PocoOSP PocoNet PocoUtil PocoXML PocoJSON PocoFoundation
-
-postbuild = $(SET_LD_LIBRARY_PATH) $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles WebTunnel.bndlspec
-
-include $(POCO_BASE)/build/rules/dylib
+.PHONY: bundle
+clean all: bundle
+bundle:
+	$(MAKE) -f Makefile-Library $(MAKECMDGOALS)
+	$(MAKE) -f Makefile-Bundle $(MAKECMDGOALS)
