updated travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-dist: trusty
+dist: bionic
 sudo: required
 language: cpp
 
@@ -23,9 +23,6 @@ matrix:
       compiler: gcc
       language: cpp
       script:
-        - sudo apt-get install -qq -y gcc-4.9 g++-4.9
-        - export CC="gcc-4.9"
-        - export CXX="g++-4.9"
         - $CXX --version
         - make -s -j2 DEFAULT_TARGET=shared_release
 
