--- a/.travis.yml
+++ b/.travis.yml
@@ -38,8 +38,8 @@ matrix:
 
     # QA jobs for code analytics and metrics
     # static code analysis with cppcheck (we can add --enable=all later)
-    - env:    TEST_NAME="cppcheck"
-      script: cppcheck --force --quiet --inline-suppr -j2 -iplatform/Data/SQLite/src/sqlite3.c .
+#    - env:    TEST_NAME="cppcheck"
+#      script: cppcheck --force --quiet --inline-suppr -j2 -iplatform/Data/SQLite/src/sqlite3.c .
     # search for TODO within source tree
     - env:    TEST_NAME="TODO"
       script: grep -r TODO *
