fix Eclipse MQTT broker address

--- a/server/macchina.properties
+++ b/server/macchina.properties
@@ -100,7 +100,7 @@ sensorlog.sensors.humidity.query = name == "io.macchina.simulation.sensor#1"
 #
 # Create a MQTT client that connects to the MQTT test server
 # provided by the Eclipse IoT project.
-mqtt.clients.eclipse.serverURI = tcp://iot.eclipse.org:1883
+mqtt.clients.eclipse.serverURI = tcp://mqtt.eclipse.org:1883
 mqtt.clients.eclipse.clientId = ${system.nodeId}
 
 #mqtt.clients.aws-iot.serverURI = ssl://data.iot.us-west-2.amazonaws.com:8883
