--- a/platform/OSP/JS/Web/Makefile
+++ b/platform/OSP/JS/Web/Makefile
@@ -17,7 +17,7 @@ objects = JSServletExecutor JSServletExecutorCache \
 
 target         = com.appinf.osp.js.web
 target_libs    = PocoOSPJS PocoJSNet PocoJSData PocoJSBridge PocoJSCore PocoOSPWeb PocoOSP PocoRemotingNG PocoNet PocoUtil PocoXML PocoData PocoFoundation
-target_extlibs = v8 v8_libplatform v8_libbase
+target_extlibs = v8
 
 postbuild = $(SET_LD_LIBRARY_PATH) $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../../bundles Web.bndlspec
 
