--- a/platform/OSP/JS/Makefile-Bundle
+++ b/platform/OSP/JS/Makefile-Bundle
@@ -11,7 +11,7 @@ objects = JSBundleActivator
 
 target         = com.appinf.osp.js
 target_libs    = PocoOSPJS PocoJSBridge PocoJSCore PocoOSP PocoRemotingNG PocoUtil PocoXML PocoFoundation
-target_extlibs = v8 v8_libplatform v8_libbase
+target_extlibs = v8
 
 postbuild = $(SET_LD_LIBRARY_PATH) $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles JS.bndlspec
 
