--- a/platform/OSP/JS/Makefile-Library
+++ b/platform/OSP/JS/Makefile-Library
@@ -20,6 +20,6 @@ objects = JSExecutor \
 target         = PocoOSPJS
 target_version = 3
 target_libs    = PocoJSBridge PocoJSCore PocoOSP PocoUtil PocoXML PocoFoundation
-target_extlibs = v8 v8_libplatform v8_libbase
+target_extlibs = v8
 
 include $(POCO_BASE)/build/rules/lib
