disable warning (with V8) on Linux, add additional build configs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,7 @@
 name: macchina.io-ci
 on: [push]
 jobs:
-  linux-gcc-make:
+  ubuntu-2004-gcc-make:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
@@ -9,4 +9,18 @@ jobs:
       - run: sudo update-alternatives --install /usr/bin/python python /usr/bin/python2 1
       - run: sudo update-alternatives --install /usr/bin/python python /usr/bin/python3 2
       - run: sudo update-alternatives --set python /usr/bin/python2
+      - run: make -s -j2 DEFAULT_TARGET=shared_release
+
+  ubuntu-1804-gcc-make:
+    runs-on: ubuntu-18.04
+    steps:
+      - uses: actions/checkout@v2
+      - run: sudo apt update && sudo apt install libssl-dev
+      - run: make -s -j2 DEFAULT_TARGET=shared_release
+
+  macos-clang-make:
+    runs-on: macos-10.15
+    steps:
+      - uses: actions/checkout@v2
+      - run: brew install openssl
       - run: make -s -j2 DEFAULT_TARGET=shared_release
