add Make variable to enable address sanitizer

--- a/platform/JS/V8/Makefile
+++ b/platform/JS/V8/Makefile
@@ -72,6 +72,8 @@ ifeq ($(findstring clang,$(CXX)),clang)
 GYPFLAGS += -Dclang=1
 endif
 
+GYPFLAGS += $(EXTRA_GYPFLAGS)
+
 ifeq ($(POCO_HOST_OSNAME),Linux)
 v8targetlibdir = lib.target/
 endif
