fix race condition when stopping a script

--- a/platform/JS/Core/Makefile
+++ b/platform/JS/Core/Makefile
@@ -11,7 +11,7 @@ CXXFLAGS += -DV8_DEPRECATION_WARNINGS=1
 objects = Wrapper PooledIsolate \
 	LoggerWrapper ConsoleWrapper SystemWrapper DateTimeWrapper LocalDateTimeWrapper \
 	ConfigurationWrapper ApplicationWrapper URIWrapper TimerWrapper \
-	BufferWrapper UUIDWrapper JSExecutor JSException Module ModuleRegistry
+	BufferWrapper UUIDWrapper JSExecutor JSTimer JSException Module ModuleRegistry
 
 target         = PocoJSCore
 target_version = 1
