--- a/platform/OSP/samples/EchoCommand/Makefile
+++ b/platform/OSP/samples/EchoCommand/Makefile
@@ -4,9 +4,8 @@
 # Makefile for EchoCommand
 #
 
-BUNDLE_TOOL = $(POCO_BASE)/OSP/BundleCreator/$(POCO_HOST_BINDIR)/bundle
-
 include $(POCO_BASE)/build/rules/global
+include $(POCO_BASE)/OSP/BundleCreator/BundleCreator.make
 
 objects = EchoCommand
 
