--- a/platform/ActiveRecord/Compiler/CMakeLists.txt
+++ b/platform/ActiveRecord/Compiler/CMakeLists.txt
@@ -2,6 +2,12 @@
 file(GLOB SRCS_G "src/*.cpp")
 POCO_SOURCES_AUTO(SRCS ${SRCS_G})
 
+# Version Resource
+if(MSVC)
+	source_group("Resources" FILES ${PROJECT_SOURCE_DIR}/DLLVersion.rc)
+	list(APPEND SRCS ${PROJECT_SOURCE_DIR}/DLLVersion.rc)
+endif()
+
 add_executable(ActiveRecordCompiler ${SRCS})
 set_target_properties(ActiveRecordCompiler
 	PROPERTIES
