Modbus improvements from commercial version

--- a/protocols/Modbus/Makefile-Library
+++ b/protocols/Modbus/Makefile-Library
@@ -13,6 +13,7 @@ objects = \
 	ModbusMasterRemoteObject \
 	ModbusMasterServerHelper \
 	ModbusMasterSkeleton \
+	ModbusMasterCreator \
 	ModbusException \
 	PDUWriter \
 	PDUReader
