--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,23 +1,16 @@
 name: macchina.io-ci
 on: [push]
 jobs:
-  ubuntu-2004-gcc-make:
-    runs-on: ubuntu-20.04
+  ubuntu-2204-gcc-make:
+    runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@v2
-      - run: sudo apt update && sudo apt install libssl-dev
-      - run: make -s -j2 DEFAULT_TARGET=shared_release
-
-  ubuntu-1804-gcc-make:
-    runs-on: ubuntu-18.04
-    steps:
-      - uses: actions/checkout@v2
-      - run: sudo apt update && sudo apt install libssl-dev
-      - run: make -s -j2 DEFAULT_TARGET=shared_release
+      - uses: actions/checkout@v3
+      - run: sudo apt update && sudo apt install libssl-dev python-is-python3
+      - run: make -s -j`nproc` DEFAULT_TARGET=shared_release
 
   macos-clang-make:
-    runs-on: macos-10.15
+    runs-on: macos-12
     steps:
-      - uses: actions/checkout@v2
-      - run: brew install openssl
-      - run: make -s -j2 DEFAULT_TARGET=shared_release
+      - uses: actions/checkout@v3
+      - run: brew install openssl@3 python@3.9
+      - run: PATH=$PATH:/usr/local/opt/python@3.9/libexec/bin make -s -j`nproc` DEFAULT_TARGET=shared_release
