--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,12 +5,33 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
-      - run: sudo apt update && sudo apt install libssl-dev python-is-python3
-      - run: make -s -j`nproc` DEFAULT_TARGET=shared_release
+      - name: Install dependencies
+        run: sudo apt update && sudo apt install libssl-dev python-is-python3
+      - name: Build
+        run: make -s -j`nproc` TESTS=1 SAMPLES=1 ASAN=1 DEFAULT_TARGET=shared_release
+      - name: Run tests
+        run: |
+        export CPPUNIT_IGNORE="\
+        CppUnit::TestCaller<RawSocketTest>.testEchoIPv4,\
+        CppUnit::TestCaller<RawSocketTest>.testSendToReceiveFromIPv4,\
+        CppUnit::TestCaller<ICMPClientTest>.testPing,\
+        CppUnit::TestCaller<ICMPClientTest>.testBigPing,\
+        CppUnit::TestCaller<ICMPSocketTest>.testSendToReceiveFrom,\
+        CppUnit::TestCaller<ICMPSocketTest>.testAssign,\
+        CppUnit::TestCaller<ICMPSocketTest>.testMTU,\
+        CppUnit::TestCaller<NTPClientTest>.testTimeSync,\
+        CppUnit::TestCaller<HTTPSClientSessionTest>.testProxy,\
+        CppUnit::TestCaller<HTTPSStreamFactoryTest>.testProxy"
+        export EXCLUDE_TESTS="Data/MySQL Data/ODBC Data/PostgreSQL MongoDB"
+        cp platform/Foundation/testsuite/bin/Linux/x86_64/TestApp platform/Foundation/testsuite
+        export PATH=$PATH:.
+        cd platform && build/script/runtests.sh
 
   macos-clang-make:
     runs-on: macos-12
     steps:
       - uses: actions/checkout@v3
-      - run: brew install openssl@3 python@3.9
+      - name: Install dependencies
+        run: brew install openssl@3 python@3.9
+      - name: Build
       - run: PATH=/usr/local/opt/python@3.9/libexec/bin:$PATH make -s -j`sysctl -n hw.ncpu` DEFAULT_TARGET=shared_release
