fix(V8): build issues with GCC 13 (Ubuntu 24.04)

--- a/platform/JS/V8/Makefile
+++ b/platform/JS/V8/Makefile
@@ -10,6 +10,9 @@ CC_HOST   ?= gcc
 CXX_HOST  ?= g++
 LINK_HOST ?= g++
 
+# Required for GCC 13
+CXXFLAGS += -fpermissive
+
 .PHONY: v8deps
 
 GYPFLAGS = -Dcomponent=shared_library -Dlinux_use_bundled_binutils=0 \
